--- a/content/docs/index.ar.mdx
+++ b/content/docs/index.ar.mdx
@@ -1,43 +1,52 @@
 ---
-title: مرحباً بك في شرح كاشفيو
-description: دليلك الكامل لإدارة أعمالك مع كاشفيو. تعلم كيفية إعداد متاجرك وإدارة المنتجات ومعالجة الطلبات وتنمية أعمالك.
+title: مرحباً بك في توثيق كاشفيو
+description: دليلك الشامل لإدارة أعمالك مع كاشفيو. تعلّم كيفية إعداد متاجرك وإدارة المنتجات ومعالجة الطلبات وتنمية أعمالك.
 ---
 
 ## ما هو كاشفيو؟
 
-كاشفيو هو منصة إدارة أعمال تساعدك على تشغيل عملياتك التجارية والإلكترونية من مكان واحد. سواء كان لديك متجر فعلي أو متجر إلكتروني أو كلاهما، يوفر لك كاشفيو الأدوات لإدارة كل شيء — المنتجات والطلبات والعملاء والمخزون والمزيد.
+كاشفيو هو منصة إدارة أعمال تساعدك في تشغيل عمليات البيع بالتجزئة والتجارة الإلكترونية من مكان واحد. سواء كان لديك متجر فعلي أو متجر إلكتروني أو كلاهما، يمنحك كاشفيو الأدوات لإدارة كل شيء — المنتجات والطلبات والعملاء والمخزون والمزيد.
+
+مع كاشفيو، تحصل على:
+
+- **بوابة إدارية** لفريقك لإدارة العمليات اليومية (الطلبات، المنتجات، المخزون، العملاء)
+- **متجر إلكتروني** للعملاء لتصفح المنتجات وإضافتها للسلة وتقديم الطلبات
+- **دعم متعدد المتاجر** مع إعدادات فردية لكل متجر
+- **دعم متعدد اللغات** (العربية والإنجليزية مع دعم RTL الكامل)
+- **الوضع الداكن والفاتح** عبر جميع الواجهات
+- **التحكم بالوصول حسب الأدوار** حتى يرى كل عضو فقط ما يحتاجه
 
 ## لمن هذا الدليل؟
 
-هذا الشرح مكتوب **لأصحاب الأعمال ومديري المتاجر وأعضاء الفريق** الذين يستخدمون كاشفيو يومياً. لا حاجة لأي معرفة تقنية. كل دليل يرشدك خطوة بخطوة بتعليمات واضحة.
+هذا التوثيق مكتوب لـ **أصحاب الأعمال ومديري المتاجر وأعضاء الفريق** الذين يستخدمون كاشفيو يومياً. لا تحتاج لمعرفة تقنية. كل دليل يرشدك عبر الخطوات بتعليمات واضحة.
 
-## كيفية استخدام هذا الشرح
+## كيف تستخدم هذا التوثيق
 
-تصفح القائمة الجانبية على اليمين للعثور على الموضوع الذي تحتاجه. كل قسم يغطي جزءاً محدداً من كاشفيو:
+تصفح الشريط الجانبي على اليمين للعثور على الموضوع الذي تحتاجه. كل قسم يغطي جزءاً محدداً من كاشفيو:
 
 ### البدء
-جديد على كاشفيو؟ ابدأ هنا لتتعلم كيفية **إنشاء حسابك** وإكمال **الإعداد الموجه** وفهم **لوحة التحكم**.
+جديد على كاشفيو؟ ابدأ هنا لتتعلم كيف **تنشئ حسابك**، وتكمل **التهيئة الموجهة**، وتفهم **لوحة التحكم**.
 
 ### إدارة المتاجر
-تعلم كيفية **إنشاء وتكوين متاجرك** وإعداد **طرق الدفع** و**طرق التنفيذ** و**رسوم الخدمة** و**مناطق التوصيل** و**إعدادات الإيصال**.
+تعلم كيف **تنشئ وتُعدّ متاجرك**، وتُعدّ **طرق الدفع** (للبوابة والمتجر الإلكتروني)، **وطرق التنفيذ** و**رسوم الخدمة** و**مناطق التوصيل** و**إعدادات الإيصال**.
 
-### الكتالوج
-إدارة **الأقسام** و**خيارات المنتجات** (مثل المقاسات والألوان) و**المنتجات بإصداراتها**.
+### كتالوج المنتجات
+إدارة **الفئات** و**خيارات المنتجات** (مثل المقاسات والألوان) و**المنتجات بمتغيراتها**.
 
 ### المبيعات والطلبات
-تعلم كيفية **إنشاء الطلبات** و**إدارة الطلبات الحالية** وتتبع **المدفوعات المتأخرة** والتعامل مع عمليات البيع اليومية.
+تعلم كيف **تنشئ طلبات** من البوابة، و**تدير الطلبات** من البوابة والمتجر الإلكتروني، وتقبل **إيصالات الدفع**، وتتتبع **الدفعات المتأخرة**، وتتعامل مع عمليات المبيعات اليومية.
 
 ### المرتجعات والاستردادات
-فهم كيفية **معالجة المرتجعات** من العملاء و**إصدار المبالغ المستردة** عبر طرق دفع مختلفة.
+فهم كيفية **معالجة المرتجعات** من العملاء و**إصدار الاستردادات** عبر طرق دفع مختلفة.
 
 ### العملاء
-إدارة **ملفات العملاء** وتتبع **أرصدة المتجر** وعرض **سجل الطلبات** لكل عميل.
+إدارة **ملفات العملاء**، تتبع **أرصدة المتجر**، وعرض **سجل الطلبات** لكل عميل.
 
 ### المخزون
-تتبع **مستويات المخزون** في جميع المتاجر والتعامل مع **تنبيهات المخزون المنخفض** وإجراء **تعديلات المخزون** و**نقل المخزون** بين المتاجر.
+تتبع **مستويات المخزون** عبر جميع المتاجر، والتعامل مع **تنبيهات المخزون المنخفض**، وإجراء **تعديلات المخزون**، و**نقل المخزون** بين المتاجر.
 
 ### الموردون والمشتريات
-إدارة **الموردين** وإنشاء **طلبات الشراء** لإعادة تعبئة مخزونك.
+إدارة **الموردين** وإنشاء **أوامر شراء** لإعادة تخزين مخزونك.
 
 ### الفريق والصلاحيات
 إعداد **أدوار بصلاحيات محددة** و**دعوة أعضاء الفريق** للمساعدة في إدارة أعمالك.
@@ -46,22 +55,22 @@ description: دليلك الكامل لإدارة أعمالك مع كاشفيو
 عرض **تقارير المبيعات** و**تحليل الأرباح** و**رؤى العملاء** و**أداء الموظفين** و**رؤى الأعمال**.
 
 ### الإعدادات
-تكوين **إعدادات الحساب** و**معلومات النشاط التجاري** و**مظهر العلامة التجارية**.
+إعداد **إعدادات الحساب** و**معلومات الأعمال** و**مظهر العلامة التجارية**.
 
 ### المتجر الإلكتروني
-إعداد **واجهة متجرك الإلكتروني** حتى يتمكن العملاء من تصفح المنتجات وإضافة العناصر للسلة و**تقديم الطلبات عبر الإنترنت**.
+إعداد **متجرك الإلكتروني** ليتمكن العملاء من تصفح المنتجات وإضافتها للسلة واختيار طرق الدفع والتنفيذ ورفع إيصالات الدفع و**تقديم الطلبات عبر الإنترنت**.
 
 ### قنوات المبيعات
-إدارة **قنوات مبيعات** مختلفة لتتبع مصدر طلباتك.
+إدارة **قنوات المبيعات** المختلفة لتتبع مصدر طلباتك.
 
 ### التكاملات
-الربط مع **فيسبوك بكسل** و**جوجل تاجز** وإدارة دعم **العملات المتعددة** و**اللغات المتعددة** لمتاجرك.
+الربط مع **Facebook Pixel** و**Google Tags**، وإدارة دعم **العملات المتعددة** و**اللغات المتعددة** لمتاجرك.
 
 ### الحسابات والتسعير
-فهم كيفية حساب **الأسعار والضرائب والخصومات وإجماليات الطلبات** في جميع أنحاء النظام.
+فهم كيف تُحسب **الأسعار والضرائب والخصومات وإجماليات الطلبات** عبر النظام.
 
 ---
 
 <Callout title="تحتاج مساعدة؟">
-إذا لم تجد ما تبحث عنه، استخدم **شريط البحث** في الأعلى للبحث في جميع صفحات الشرح.
+إذا لم تجد ما تبحث عنه، استخدم **شريط البحث** في الأعلى للبحث في جميع صفحات التوثيق.
 </Callout>
