--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -7,6 +7,15 @@ description: Your complete guide to managing your business with Cashvio. Learn h
 
 Cashvio is a business management platform that helps you run your retail and e-commerce operations from one place. Whether you have a physical store, an online shop, or both, Cashvio gives you the tools to manage everything — products, orders, customers, inventory, and more.
 
+With Cashvio, you get:
+
+- A **portal** for your team to manage daily operations (orders, products, inventory, customers)
+- An **online storefront** for customers to browse, add to cart, and place orders
+- **Multi-store support** with individual settings for each store
+- **Multi-language support** (English and Arabic with full RTL support)
+- **Dark and light mode** across all interfaces
+- **Role-based access control** so each team member sees only what they need
+
 ## Who is this guide for?
 
 This documentation is written for **business owners, store managers, and team members** who use Cashvio daily. No technical knowledge is required. Each guide walks you through the steps with clear instructions.
@@ -19,13 +28,13 @@ Browse the sidebar on the left to find the topic you need. Each section covers a
 New to Cashvio? Start here to learn how to **create your account**, complete the **guided onboarding**, and understand your **Dashboard**.
 
 ### Store Management
-Learn how to **create and configure your stores**, set up **payment methods**, **fulfillment methods**, **service fees**, **delivery zones**, and **receipt settings**.
+Learn how to **create and configure your stores**, set up **payment methods** (for both portal and storefront), **fulfillment methods**, **service fees**, **delivery zones**, and **receipt settings**.
 
 ### Product Catalogue
 Manage your **categories**, **product options** (like sizes and colors), and **products with variants**.
 
 ### Sales & Orders
-Learn how to **create orders**, **manage existing orders**, track **overdue payments**, and handle day-to-day sales operations.
+Learn how to **create orders** from the portal, **manage orders** from both portal and storefront, accept **receipt payments**, track **overdue payments**, and handle day-to-day sales operations.
 
 ### Returns & Refunds
 Understand how to **process returns** from customers and **issue refunds** through different payment methods.
@@ -49,7 +58,7 @@ View **sales reports**, **profit analysis**, **customer insights**, **staff perf
 Configure your **account settings**, **business information**, and **brand appearance**.
 
 ### Online Store
-Set up your **online storefront** so customers can browse products, add items to cart, and **place orders online**.
+Set up your **online storefront** so customers can browse products, add items to cart, select payment and fulfillment methods, upload payment receipts, and **place orders online**.
 
 ### Sales Channels
 Manage different **sales channels** to track where your orders come from.
