--- a/content/docs/online-store/storefront-overview.ar.mdx
+++ b/content/docs/online-store/storefront-overview.ar.mdx
@@ -1,145 +1,141 @@
 ---
 title: نظرة عامة على المتجر الإلكتروني
-description: كيف يعمل متجرك الإلكتروني وما يراه العملاء وكيفية تكوينه من بوابة المالك.
+description: كيف يعمل متجرك الإلكتروني وما يراه العملاء وكيفية إعداده من البوابة الإدارية.
 ---
 
 ## ما هو المتجر الإلكتروني؟
 
-**المتجر الإلكتروني** (أو واجهة المتجر) هو موقع ويب يواجه العملاء حيث يمكنهم تصفح منتجاتك وإضافة عناصر للسلة وتقديم طلبات عبر الإنترنت. كل متجر في كاشفيو يمكن أن يكون له واجهة متجر خاصة متاحة عبر نطاق فرعي فريد (مثل: `mystore.cash-vio.com`).
+**المتجر الإلكتروني** هو موقع ويب مخصص للعملاء حيث يمكنهم تصفح المنتجات وإضافتها للسلة وتقديم الطلبات عبر الإنترنت. كل متجر في كاشفيو يمكن أن يكون لديه متجر إلكتروني خاص يمكن الوصول إليه عبر نطاق فرعي فريد (مثل `mystore.cash-vio.com`).
 
 <Callout title="مهم">
-كاشفيو يدعم **واجهات المتاجر القائمة على النطاقات الفرعية فقط** (التنسيق: `yourstorename.cash-vio.com`). النطاقات المخصصة غير متاحة حالياً.
+يدعم كاشفيو **المتاجر الإلكترونية بالنطاقات الفرعية فقط** (بالتنسيق: `اسممتجرك.cash-vio.com`). النطاقات المخصصة غير متاحة حالياً.
 </Callout>
 
-## كيف يختبر العملاء متجرك
+## تجربة العملاء في متجرك
 
-عند زيارة العملاء لواجهة متجرك، يرون:
+عندما يزور العملاء متجرك الإلكتروني، يرون:
 
 ### الصفحة الرئيسية
-- **صور البانر** — حتى 5 صور بانر كبيرة تكوّنها مع تحكم في ترتيب العرض
-- **الأقسام المميزة** — أقسام منتجاتك لتصفح سهل
+- **صور البانر** — حتى 5 صور بانر كبيرة تُعدّها مع التحكم بترتيب العرض
+- **الفئات المميزة** — فئات منتجاتك لتصفح سهل
 - **المنتجات المميزة** — مجموعة من منتجاتك النشطة
 
 ### تصفح المنتجات
 - صفحة **جميع المنتجات** مع بحث وترتيب وتصفية
-- **صفحات الأقسام** تعرض منتجات كل قسم
-- صفحات **تفاصيل المنتج** بالصور والأوصاف واختيار الإصدار والتسعير
-- **إخفاء المنتجات غير المتوفرة** — خيار لإخفاء المنتجات غير المتوفرة في المخزون (قابل للتكوين في إعدادات المتجر)
+- **صفحات الفئات** تعرض المنتجات في كل فئة
+- صفحات **تفاصيل المنتج** مع الصور والأوصاف واختيار المتغيرات والأسعار
+- **خيارات الترتيب** — ترتيب حسب الأحدث أو الاسم أو السعر من الأقل أو من الأعلى
+- **التصفية** — تصفية حسب الفئة أو المتوفر فقط
+- **إخفاء غير المتوفر** — خيار لإخفاء المنتجات غير المتوفرة (قابل للإعداد في إعدادات المتجر)
 
 ### سلة التسوق
 - يضيف العملاء المنتجات لسلتهم
 - يمكنهم تعديل الكميات وإزالة العناصر ورؤية ملخص الطلب
-- تعرض السلة الإجمالي الفرعي والشحن والضريبة والإجمالي
+- تعرض السلة المجموع الفرعي والشحن والضريبة والإجمالي
+- **التحقق من المخزون** — تتحقق السلة من توفر المنتج والحد الأقصى للكمية
 
-### دعم اللغة
-- يمكن للعملاء التبديل بين **الإنجليزية** و**العربية**
-- واجهة المتجر بالكامل تدعم RTL (من اليمين لليسار) للعربية
+### الدفع
+- **اختيار التنفيذ** — توصيل أو استلام
+- **اختيار طريقة الدفع** — نقدي أو إيصال (مع رفع صورة إيصال)
+- **مناطق التوصيل** — إذا كانت مُعدّة، تتوفر فقط بلدان ومدن مناطق التوصيل
+- **معاينة الطلب** — تفصيل كامل للتكاليف قبل تقديم الطلب
+- **التحقق من الحد الأدنى** — يفرض الحد الأدنى لقيمة الطلب إذا كان مُعدّاً
+
+راجع [تدفق الشراء عبر الإنترنت](/docs/online-store/checkout-flow) للعملية الكاملة.
+
+### دعم اللغات
+- يمكن للعملاء التبديل بين **العربية** و**الإنجليزية**
+- المتجر الإلكتروني بالكامل يدعم RTL (من اليمين لليسار) للعربية
+- أسماء المنتجات والفئات ونماذج الدفع تُعرض باللغة المختارة
 
 ### المظهر
-- يمكن للعملاء التبديل بين **الوضع الفاتح** و**الوضع الداكن**
+- يمكن للعملاء التبديل بين الوضع **الفاتح** و**الداكن**
 
-<Callout title="ملاحظة">
-واجهة المتجر تدعم **الوضع الفاتح والداكن فقط**. المظاهر المخصصة والألوان والخطوط أو تخصيص التخطيط بخلاف تبديل الوضع غير متاحة.
-</Callout>
+### التذييل
+- **إشعار حقوق النشر** باسم متجرك
+- **"مدعوم من كاشفيو"** مع رابط لموقع كاشفيو
+- روابط لـ **صفحاتك الثابتة** (الشروط، الخصوصية، سياسة الاسترداد، إلخ)
+- **روابط التواصل الاجتماعي** إذا كانت مُعدّة
+- على الهاتف، يحل **شريط التنقل السفلي** محل التذييل مع وصول سريع للرئيسية والفئات والمنتجات والسلة والاتصال
 
-## تكوين متجرك الإلكتروني
+## إعداد متجرك الإلكتروني
 
-من **بوابة المالك**، اذهب لإعدادات متجرك وانتقل إلى **المتجر الإلكتروني**.
+من **البوابة الإدارية**، انتقل لإعدادات متجرك واختر **المتجر الإلكتروني**.
 
-### تكوين النطاق الفرعي للمتجر
+### إعداد النطاق الفرعي
 
-يمكن أن يكون لكل متجر نطاق فرعي فريد:
+كل متجر يمكن أن يكون لديه نطاق فرعي فريد:
 
-- **تنسيق النطاق الفرعي** — `yourstorename.cash-vio.com`
-- **إعداد النطاق الفرعي** — كوّن النطاق الفرعي لمتجرك في إعدادات المتجر الإلكتروني
-- **الوصول** — بعد التكوين، يمكن الوصول لواجهة متجرك على عنوان URL للنطاق الفرعي
+- **تنسيق النطاق** — `اسممتجرك.cash-vio.com`
+- **الإعداد** — أعدّ النطاق الفرعي لمتجرك في إعدادات المتجر الإلكتروني
+- **الوصول** — بمجرد الإعداد، يمكن الوصول لمتجرك عبر رابط النطاق الفرعي
 
-<Callout title="مهم">
-كاشفيو يدعم **واجهات المتاجر القائمة على النطاقات الفرعية فقط**. النطاقات المخصصة غير متاحة حالياً. اختر نطاقك الفرعي بعناية لأنه يصبح جزءاً من عنوان الويب لمتجرك.
-</Callout>
-
-### ما يمكنك تكوينه
+### ما يمكنك إعداده
 
 | الإعداد | الوصف |
 |---------|-------|
-| **صور البانر** | ارفع حتى 5 صور بانر للصفحة الرئيسية. عيّن ترتيب العرض بسحب الصور. الصورة الأولى تُعرض افتراضياً. |
-| **شعار المتجر** | شعارك المعروض في ترويسة واجهة المتجر |
-| **إعدادات SEO** | كوّن تحسين محركات البحث: |
-| | - **عنوان Meta** — عنوان الصفحة المعروض في نتائج البحث وتبويبات المتصفح |
-| | - **وصف Meta** — الوصف المعروض في نتائج محرك البحث |
-| | - **أيقونة الموقع** — أيقونة صغيرة معروضة في تبويبات المتصفح والإشارات المرجعية |
-| **روابط وسائل التواصل** | أضف روابط لملفاتك الشخصية على وسائل التواصل: |
-| | - فيسبوك |
-| | - إنستغرام |
-| | - تيك توك |
-| | - يوتيوب |
-| | - الموقع الإلكتروني (عنوان URL لموقعك الرئيسي) |
-| **هاتف التواصل** | رقم الهاتف المعروض في المتجر لتواصل العملاء |
-| **إخفاء المنتجات غير المتوفرة** | تبديل لإخفاء المنتجات ذات المخزون الصفري من واجهة المتجر (لن يرى العملاء المنتجات غير المتوفرة) |
-| **التحليلات** | معرف Google Tag Manager ومعرف Facebook Pixel للتتبع |
-| **الصفحات الثابتة** | أنشئ صفحات سياسات ومعلومات مخصصة مع محرر نص غني: |
-| | - **سياسة الاسترداد** — سياسة الاسترداد والإرجاع الخاصة بك |
-| | - **سياسة الشحن** — معلومات حول طرق الشحن والتكاليف وأوقات التسليم |
-| | - **من نحن** — معلومات حول أعمالك |
-| | كل صفحة تدعم تنسيق النص الغني (عريض، مائل، قوائم، روابط، إلخ) |
+| **صور البانر** | رفع حتى 5 صور بانر للصفحة الرئيسية. حدد ترتيب العرض بالسحب. |
+| **شعار المتجر** | شعارك المعروض في رأس المتجر الإلكتروني |
+| **إعدادات SEO** | عنوان التعريف، الوصف التعريفي، الأيقونة المفضلة |
+| **روابط التواصل الاجتماعي** | فيسبوك، إنستغرام، تيك توك، يوتيوب، الموقع |
+| **هاتف الاتصال** | رقم الهاتف المعروض في المتجر لتواصل العملاء |
+| **إخفاء غير المتوفر** | إخفاء المنتجات ذات المخزون الصفري من المتجر الإلكتروني |
+| **التحليلات** | معرّف Google Tag Manager ومعرّف Facebook Pixel للتتبع |
+| **الصفحات الثابتة** | إنشاء صفحات سياسات ومعلومات مع محرر نصوص غني |
 
 ## ما يؤثر على متجرك الإلكتروني
 
-واجهة متجرك مرتبطة ببوابة المالك. التغييرات التي تجريها في البوابة تنعكس على واجهة المتجر:
+متجرك الإلكتروني متصل بالبوابة الإدارية. التغييرات التي تجريها في البوابة تنعكس على المتجر:
 
-| إعداد البوابة | التأثير على واجهة المتجر |
-|---------------|--------------------------|
+| إعداد البوابة | التأثير على المتجر الإلكتروني |
+|---------------|-------------------------------|
 | **المنتجات** | المنتجات بحالة "نشط" تظهر في المتجر |
-| **الأقسام** | الأقسام النشطة تظهر في التنقل |
-| **الأسعار** | أسعار البيع من إصدارات المنتج تُعرض |
-| **طرق التنفيذ** | الطرق المفعّلة تظهر أثناء إتمام الشراء |
-| **مناطق التوصيل** | مناطق التوصيل المتاحة والرسوم أثناء إتمام الشراء |
-| **طرق الدفع** | كيف يدفع العملاء |
+| **الفئات** | الفئات النشطة تظهر في التصفح |
+| **الأسعار** | أسعار البيع من متغيرات المنتجات تُعرض |
+| **طرق التنفيذ** | الطرق المُفعّلة (توصيل، استلام) تظهر أثناء الدفع |
+| **مناطق التوصيل** | مناطق التوصيل المتاحة ورسومها أثناء الدفع |
+| **طرق دفع المتجر الإلكتروني** | النقدي والإيصال يظهران أثناء الدفع بناءً على إعداداتك |
+| **رسوم الخدمة** | رسوم التوصيل والخدمة تُطبّق أثناء الدفع |
 
 <Callout title="مهم">
-فقط المنتجات والأقسام **النشطة** تظهر في واجهة المتجر. العناصر المسودة أو التي لم تعد متاحة مخفية عن العملاء. إذا كان "إخفاء المنتجات غير المتوفرة" مفعّلاً، المنتجات ذات المخزون الصفري مخفية أيضاً.
+فقط المنتجات والفئات **النشطة** تظهر في المتجر الإلكتروني. العناصر المسودة أو المؤرشفة مخفية عن العملاء.
 </Callout>
 
 ## إدارة صور البانر
 
-صور البانر هي صور البانر الكبيرة المعروضة في أعلى الصفحة الرئيسية لواجهة متجرك:
+صور البانر هي الصور الكبيرة المعروضة في أعلى الصفحة الرئيسية:
 
-1. اذهب إلى إعدادات **المتجر الإلكتروني**.
-2. انتقل إلى **صور البانر**.
-3. **رفع الصور** — أضف حتى 5 صور (الحجم الموصى به: 1920x600 بكسل لأفضل عرض)
-4. **تعيين ترتيب العرض** — اسحب الصور لإعادة ترتيبها. الصورة الأولى تُعرض افتراضياً.
-5. **إزالة الصور** — انقر على زر الإزالة لحذف الصور غير المرغوب فيها.
-
-<Callout title="نصيحة">
-استخدم صوراً عالية الجودة وجذابة بصرياً تمثل علامتك التجارية. حافظ على أحجام الملفات معقولة لأوقات تحميل سريعة.
-</Callout>
+1. انتقل لإعدادات **المتجر الإلكتروني**.
+2. انتقل لـ **صور البانر**.
+3. **رفع الصور** — أضف حتى 5 صور (الحجم الموصى: 1920x600 بكسل)
+4. **ترتيب العرض** — اسحب الصور لإعادة ترتيبها.
+5. **إزالة الصور** — انقر زر الإزالة لحذف الصور غير المرغوبة.
 
 ## إعدادات SEO
 
 حسّن ظهور متجرك في محركات البحث:
 
-- **عنوان Meta** — العنوان الذي يظهر في نتائج محرك البحث وتبويبات المتصفح (موصى به: 50-60 حرفاً)
-- **وصف Meta** — وصف موجز لمتجرك (موصى به: 150-160 حرفاً)
-- **أيقونة الموقع** — ارفع أيقونة صغيرة (16x16 أو 32x32 بكسل) تظهر في تبويبات المتصفح والإشارات المرجعية
-
-<Callout title="نصيحة">
-اكتب عناوين وأوصاف meta مقنعة تتضمن كلمات مفتاحية ذات صلة. هذا يساعد العملاء على العثور على متجرك في نتائج البحث.
-</Callout>
+- **عنوان التعريف** — العنوان في نتائج البحث وتبويبات المتصفح (الموصى: 50-60 حرفاً)
+- **الوصف التعريفي** — وصف مختصر لمتجرك (الموصى: 150-160 حرفاً)
+- **الأيقونة المفضلة** — رفع أيقونة صغيرة تظهر في تبويبات المتصفح
 
 ## الصفحات الثابتة
 
-أنشئ صفحات إعلامية لعملائك:
+أنشئ صفحات معلومات لعملائك:
 
-### إنشاء صفحة ثابتة
-
-1. اذهب إلى إعدادات **المتجر الإلكتروني**.
-2. انتقل إلى **الصفحات الثابتة**.
+1. انتقل لإعدادات **المتجر الإلكتروني**.
+2. انتقل لـ **الصفحات الثابتة**.
 3. اختر نوع الصفحة (سياسة الاسترداد، سياسة الشحن، أو من نحن).
-4. استخدم **محرر النص الغني** لتنسيق محتواك:
-   - نص عريض ومائل
-   - قوائم نقطية ومرقمة
-   - روابط لصفحات أو مواقع أخرى
-   - عناوين وفقرات
-5. انقر على **حفظ**.
+4. استخدم **المحرر الغني** لتنسيق محتواك.
+5. انقر **حفظ**.
 
-هذه الصفحات مرتبطة تلقائياً في تذييل واجهة متجرك ويمكن للعملاء الوصول إليها في أي وقت.
+هذه الصفحات مرتبطة تلقائياً في تذييل متجرك الإلكتروني.
+
+## تكامل التحليلات
+
+تتبع سلوك العملاء في متجرك مع:
+
+- **Google Tag Manager** — أضف معرّف حاوية GTM لتتبع مشاهدات الصفحات والإضافة للسلة والشراء
+- **Facebook Pixel** — أضف معرّف البكسل لتتبع التحويلات وبناء جماهير إعادة الاستهداف
+
+راجع [Google Tags](/docs/integrations/google-tags) و[Facebook Pixel](/docs/integrations/facebook-pixel) لتعليمات الإعداد المفصلة.
