--- a/content/docs/orders/creating-orders.ar.mdx
+++ b/content/docs/orders/creating-orders.ar.mdx
@@ -1,142 +1,132 @@
 ---
 title: إنشاء الطلبات
-description: دليل خطوة بخطوة لإنشاء طلب مبيعات جديد واختيار المنتجات وتطبيق الخصومات ومعالجة المدفوعات.
+description: دليل خطوة بخطوة لإنشاء طلب مبيعات جديد واختيار المنتجات وتطبيق الخصومات ومعالجة الدفع.
 ---
 
 ## كيفية إنشاء طلب
 
-1. اذهب إلى **المبيعات > إنشاء طلب** في القائمة الجانبية، أو انقر على **إنشاء طلب** من الإجراءات السريعة في لوحة التحكم.
-2. تفتح شاشة إنشاء الطلب بوضع ملء الشاشة بلوحتين.
+1. انتقل إلى **المبيعات > إنشاء طلب** في الشريط الجانبي، أو انقر **إنشاء طلب** من الإجراءات السريعة في لوحة التحكم.
+2. تفتح شاشة إنشاء الطلب بوضع ملء الشاشة مع لوحتين.
 
-### اللوحة اليمنى — تفاصيل الطلب
+### اللوحة اليسرى — تفاصيل الطلب
 
-هنا تكوّن الطلب:
+هنا تقوم بإعداد الطلب:
 
 | الحقل | الوصف |
 |-------|-------|
-| **المتجر** | اختر المتجر الذي ينتمي إليه هذا الطلب (إذا كان لديك متاجر متعددة) |
-| **العميل** | اختر عميلاً موجوداً أو انقر على **إضافة عميل** لإنشاء عميل جديد |
-| **مصدر الطلب** | يتم تتبعه تلقائياً: نقطة البيع، البوابة، الهاتف المحمول، أو API (يعرض من أين نشأ الطلب) |
+| **المتجر** | اختر المتجر الذي ينتمي إليه هذا الطلب (إذا كان لديك عدة متاجر) |
+| **العميل** | اختر عميلاً موجوداً أو انقر **إضافة عميل** لإنشاء عميل جديد |
 | **طريقة التنفيذ** | اختر: في المتجر، استلام، توصيل، أو تناول في المكان |
-| **عنوان التوصيل** | مطلوب إذا كان التنفيذ بالتوصيل (الدولة، المدينة، التفاصيل) |
+| **عنوان التوصيل** | مطلوب إذا كان التنفيذ توصيل (البلد، المدينة، التفاصيل) |
 | **القناة** | قناة المبيعات لهذا الطلب |
-| **ملاحظات** | ملاحظات اختيارية حول الطلب |
+| **ملاحظات** | ملاحظات اختيارية عن الطلب |
 
-### اللوحة اليسرى — اختيار المنتجات
+### اللوحة اليمنى — اختيار المنتجات
 
 هنا تختار المنتجات لإضافتها للطلب:
 
-1. **تصفح حسب القسم** — انقر على تبويبات الأقسام لتصفية المنتجات.
+1. **تصفح حسب الفئة** — انقر على تبويبات الفئات لتصفية المنتجات.
 2. **بحث** — استخدم شريط البحث للعثور على المنتجات بالاسم.
-3. **انقر على منتج** لإضافته للطلب. إذا كان للمنتج إصدارات متعددة، سيُطلب منك اختيار إصدار.
-4. **عنصر مخصص** — انقر على **إضافة عنصر مخصص** لإضافة عنصر غير موجود في مخزونك:
-   - أدخل اسماً ووصفاً مخصصين
-   - عيّن السعر والكمية
-   - العناصر المخصصة مفيدة للخدمات أو الطلبات الخاصة أو العناصر التي لا تضعها في المخزون بانتظام
-   - العناصر المخصصة لا تؤثر على مستويات المخزون
+3. **انقر على منتج** لإضافته للطلب. إذا كان للمنتج عدة متغيرات، سيُطلب منك اختيار واحد.
+4. **عنصر مخصص** — انقر **إضافة عنصر مخصص** لإضافة عنصر غير موجود في المخزون.
 
 ### قسم السلة
 
-عند إضافة المنتجات، تظهر في السلة (قائمة عناصر الطلب):
+مع إضافة المنتجات، تظهر في السلة (قائمة عناصر الطلب):
 
 - **تعديل الكمية** — انقر + أو - لتغيير الكمية.
-- **إزالة عنصر** — انقر على زر الإزالة لحذف عنصر.
-- كل سطر يعرض اسم المنتج والإصدار والكمية والسعر.
+- **إزالة عنصر** — انقر زر الإزالة لحذف عنصر.
+- كل سطر يعرض اسم المنتج والمتغير والكمية والسعر.
 
 ### ملخص الطلب
 
-أسفل السلة، سترى حسابات الطلب:
+أسفل السلة، سترى حساب الطلب:
 
 | السطر | الوصف |
 |-------|-------|
-| **الإجمالي الفرعي** | مجموع أسعار جميع العناصر |
-| **رسوم الخدمة** | تُضاف تلقائياً إذا كانت مكوّنة (يمكن تعديلها) |
-| **رسوم التوصيل** | تُضاف تلقائياً لطلبات التوصيل (يمكن تعديلها) |
+| **المجموع الفرعي** | مجموع أسعار جميع العناصر |
+| **[رسوم الخدمة](/docs/stores/service-fees)** | تُضاف تلقائياً إذا كانت مُعدّة |
+| **[رسوم التوصيل](/docs/stores/delivery-zones)** | تُضاف تلقائياً لطلبات التوصيل |
 | **الخصم** | انقر لتطبيق خصم يدوي (مبلغ ثابت أو نسبة مئوية) |
 | **الضريبة** | تُحسب تلقائياً بناءً على إعدادات الضريبة |
-| **الإجمالي** | المبلغ النهائي الذي يدين به العميل |
+| **الإجمالي** | المبلغ النهائي المستحق على العميل |
 
 ## تطبيق خصم
 
-1. انقر على زر **الخصم** في ملخص الطلب.
+1. انقر زر **الخصم** في ملخص الطلب.
 2. اختر نوع الخصم:
-   - **مبلغ ثابت** — مبلغ محدد من الإجمالي (مثل: 50 ج.م خصم)
-   - **نسبة مئوية** — نسبة من الإجمالي الفرعي (مثل: 10% خصم)
+   - **مبلغ ثابت** — مبلغ محدد من الإجمالي
+   - **نسبة مئوية** — نسبة من المجموع الفرعي
 3. أدخل قيمة الخصم.
 4. يتحدث إجمالي الطلب تلقائياً.
 
-## معالجة الدفع (إتمام الشراء)
+## معالجة الدفع (الخروج)
 
-1. انقر على **إتمام الشراء** عندما يكون الطلب جاهزاً.
+1. انقر **الخروج** عندما يكون الطلب جاهزاً.
 2. يفتح مربع حوار الدفع.
-3. اختر **طريقة الدفع**:
-   - **نقدي** — دفع نقدي فعلي
-   - **بطاقة** — دفع ببطاقة ائتمان أو خصم
-   - **إنستاباي** — دفع إنستاباي
-   - **محفظة إلكترونية** — دفع بمحفظة إلكترونية (مثل: فودافون كاش، أورنج ماني)
-   - **تحويل بنكي** — دفع بتحويل بنكي
-   - **رصيد المتجر** — استخدم رصيد متجر العميل (متاح فقط إذا تم اختيار عميل ولديه رصيد)
 
-4. أدخل **المبلغ المدفوع**.
-5. خيارات الدفع:
-   - **دفع كامل** — ادفع المبلغ بالكامل مرة واحدة.
-   - **دفع جزئي** — ادفع جزءاً الآن وجدول الباقي (راجع [المدفوعات المجدولة](#المدفوعات-المجدولة) أدناه).
-   - **تخطي الدفع** — أنشئ الطلب بحالة دفع معلقة.
-6. انقر على **تأكيد** لإكمال الطلب.
+### رصيد المتجر
 
-### دفع رصيد المتجر
+إذا كان للعميل المحدد رصيد في المتجر:
 
-عند اختيار عميل ولديه رصيد متجر:
+- يظهر مفتاح **استخدام رصيد المتجر** أعلى قسم الدفع.
+- فعّله لتطبيق رصيد العميل على الطلب.
+- يعرض النظام مقدار الرصيد المستخدم والمبلغ المتبقي للدفع.
+- إذا غطى الرصيد كامل الطلب، لا حاجة لطريقة دفع إضافية.
 
-- يظهر **رصيد المتجر** كخيار طريقة دفع
-- يُعرض مبلغ الرصيد المتاح
-- يمكنك استخدام كل الرصيد أو جزء منه
-- إذا لم يغطِ الرصيد الطلب بالكامل، يمكنك دمجه مع طريقة دفع أخرى
-- يُخصم الرصيد تلقائياً من رصيد العميل
+### اختيار طريقة الدفع
+
+اختر طريقة الدفع للمبلغ المتبقي:
+
+| الطريقة | الوصف |
+|---------|-------|
+| **نقدي** | الدفع نقداً. أدخل المبلغ المستلم ويحسب النظام المتبقي. |
+| **إلكتروني** | الدفع الرقمي (بطاقة، إنستاباي، محفظة إلكترونية، تحويل بنكي، إلخ). |
+| **إيصال** | دفع بتحويل مع رفع صورة إيصال اختيارية. |
+
+<Callout title="ملاحظة">
+فقط طرق الدفع **المُفعّلة** لمتجرك تظهر في هذه القائمة. راجع [طرق الدفع](/docs/stores/payment-methods) لإعدادها.
+</Callout>
+
+### رفع الإيصال
+
+عند اختيار **إيصال** كطريقة دفع:
+
+1. يظهر قسم رفع أسفل اختيار طريقة الدفع.
+2. انقر **اختيار ملف** لرفع صورة إيصال الدفع (JPEG أو PNG أو WebP).
+3. يُرفع الملف تلقائياً ويُرفق بسجل الدفع.
+4. الرفع اختياري — يمكنك إنشاء الطلب بدون رفع صورة إيصال.
 
 ### الدفع النقدي مع الباقي
 
-إذا دفع العميل نقداً بأكثر من الإجمالي:
+إذا دفع العميل نقداً مبلغاً أكبر من الإجمالي:
 
-- يعرض النظام **مبلغ الباقي** لإرجاعه.
-- مثال: إجمالي الطلب 150 ج.م، العميل يدفع 200 ج.م ← الباقي 50 ج.م.
+- يعرض النظام **مبلغ الباقي** للإعادة.
+- مثال: إجمالي الطلب 150 جنيه، دفع العميل 200 جنيه، الباقي 50 جنيه.
 
-### المدفوعات المجدولة
+### جدولة الدفعة المتبقية
 
-للطلبات ذات المدفوعات الجزئية، يمكنك جدولة الرصيد المتبقي:
+للطلبات مع دفع جزئي:
 
-1. اختر **دفع جزئي** أثناء إتمام الشراء.
-2. أدخل المبلغ المدفوع الآن.
-3. عيّن **تاريخ الاستحقاق** للرصيد المتبقي.
-4. يتم إنشاء الطلب بحالة دفع تعرض المبلغ المدفوع والرصيد المستحق.
-5. يمكنك تتبع المدفوعات المجدولة في قسم [المدفوعات المتأخرة](/docs/orders/overdue-payments).
-
-<Callout title="ملاحظة">
-المدفوعات المجدولة تساعدك على إدارة ائتمان العملاء وتتبع الأرصدة المستحقة. تأكد من متابعة المدفوعات المستحقة للحفاظ على تدفق نقدي صحي.
-</Callout>
+1. فعّل خانة **جدولة الدفعة المتبقية**.
+2. حدد **تاريخ الاستحقاق** للمبلغ المتبقي.
+3. يصبح المبلغ المتبقي دفعة مجدولة معلقة.
+4. تتبع الدفعات المجدولة في قسم [الدفعات المتأخرة](/docs/orders/overdue-payments).
 
 ## بعد إنشاء الطلب
 
 بمجرد إنشاء الطلب:
 
-- يظهر **مربع حوار نجاح** مع خيارات الإيصال (راجع [خيارات الإيصال](#خيارات-الإيصال) أدناه).
-- يظهر الطلب في قائمة **المبيعات** برقم طلبه.
-- يتم تسجيل **مصدر الطلب** تلقائياً (نقطة البيع، البوابة، الهاتف المحمول، أو API) للتتبع والتحليلات.
-- يتم تعديل المخزون تلقائياً (إذا كان تتبع المخزون مفعّلاً).
+- يظهر مربع **حوار النجاح** مع خيارات الإيصال.
+- يظهر الطلب في قائمة **المبيعات** برقم الطلب الخاص به.
+- يُسجل **مصدر الطلب** تلقائياً كـ **ويب** (البوابة) للتتبع والتحليلات.
+- يُعدّل المخزون تلقائياً (إذا كان تتبع المخزون مُفعّلاً).
 
 ### خيارات الإيصال
 
-بعد إنشاء طلب، لديك عدة خيارات لتوفير الإيصال للعميل:
+بعد إنشاء الطلب، لديك عدة خيارات لتقديم الإيصال للعميل:
 
-- **طباعة الإيصال** — اطبع إيصالاً فعلياً باستخدام طابعة الإيصالات الخاصة بك
-- **تحميل PDF** — حمّل الإيصال كملف PDF لإرساله بالبريد الإلكتروني أو مشاركته
-- **رابط المشاركة** — أنشئ رابطاً قابلاً للمشاركة يمكن للعميل الوصول إليه لعرض أو تحميل الإيصال
-- **رمز QR** — اعرض رمز QR يمكن للعملاء مسحه للوصول لإيصالهم
-
-<Callout title="نصيحة">
-روابط الإيصالات ورموز QR مفيدة بشكل خاص لطلبات التوصيل أو عندما يفضل العملاء الإيصالات الرقمية. يبقى الرابط قابلاً للوصول للمرجع المستقبلي.
-</Callout>
-
-<Callout title="نصيحة">
-يمكنك إنشاء طلبات بعميل محدد مسبقاً عن طريق التنقل من صفحة تفاصيل العميل. يتم ملء العميل تلقائياً.
-</Callout>
+- **طباعة الإيصال** — اطبع إيصالاً ورقياً باستخدام طابعة الإيصالات
+- **تحميل PDF** — حمّل الإيصال كملف PDF لإرساله بالبريد أو مشاركته
+- **مشاركة الرابط** — أنشئ رابطاً قابلاً للمشاركة يمكن للعميل الوصول إليه
+- **رمز QR** — اعرض رمز QR يمكن للعميل مسحه للوصول لإيصاله
