--- a/content/docs/orders/managing-orders.ar.mdx
+++ b/content/docs/orders/managing-orders.ar.mdx
@@ -1,35 +1,49 @@
 ---
 title: إدارة الطلبات
-description: كيفية عرض وتصفية وتحديث وإدارة طلبات المبيعات بما في ذلك حالة التنفيذ والمدفوعات.
+description: كيفية عرض وتصفية وتحديث وإدارة طلبات المبيعات بما في ذلك حالة التنفيذ والدفعات وقبول الإيصالات.
 ---
 
 ## عرض جميع الطلبات
 
-1. اذهب إلى **المبيعات > كل المبيعات** في القائمة الجانبية.
-2. سترى جدولاً بجميع الطلبات بأعمدة:
+1. انتقل إلى **المبيعات > جميع المبيعات** في الشريط الجانبي.
+2. سترى جدولاً بجميع الطلبات مع الأعمدة التالية:
 
 | العمود | الوصف |
 |--------|-------|
-| **رقم الطلب** | معرف فريد لكل طلب |
+| **رقم الطلب** | معرّف فريد لكل طلب |
 | **العميل** | العميل الذي قدم الطلب |
 | **المتجر** | المتجر الذي ينتمي إليه الطلب |
-| **الحالة** | حالة التنفيذ الحالية |
-| **حالة الدفع** | ما إذا كان الطلب مدفوعاً أو مدفوعاً جزئياً أو غير مدفوع |
-| **الإجمالي** | المبلغ الإجمالي للطلب |
-| **التاريخ** | متى تم إنشاء الطلب |
+| **مصدر الطلب** | أين أُنشئ الطلب — **ويب** (البوابة الإدارية) أو **المتجر الإلكتروني** |
+| **طريقة الدفع** | طريقة الدفع الأساسية (نقدي، إلكتروني، إيصال، أو رصيد المتجر) |
+| **طريقة التنفيذ** | كيف سيُنفّذ الطلب (في المتجر، استلام، توصيل، أو تناول في المكان) |
+| **حالة التنفيذ** | حالة التنفيذ الحالية (معلق، قيد التحضير، جاهز، قيد التوصيل، مكتمل، ملغي) |
+| **حالة الدفع** | هل الطلب مدفوع أو مدفوع جزئياً أو غير مدفوع |
+| **الإجمالي** | إجمالي مبلغ الطلب |
+| **التاريخ** | تاريخ إنشاء الطلب |
+
+### العرض على الهاتف
+
+على الأجهزة المحمولة، تُعرض الطلبات كبطاقات بدلاً من جدول. كل بطاقة تعرض:
+
+- رقم الطلب
+- اسم العميل
+- شارة مصدر الطلب
+- طريقة الدفع
+- طريقة التنفيذ وحالته
+- حالة الدفع
+- المبلغ الإجمالي
+- التاريخ
 
 ## تصفية الطلبات
 
-استخدم شريط البحث لتضييق نطاق طلباتك:
+استخدم شريط التصفية لتضييق نطاق الطلبات:
 
-- **رقم الطلب** — بحث برقم الطلب
-- **المتجر** — تصفية حسب المتجر
-- **العميل** — تصفية حسب اسم العميل
-- **الحالة** — تصفية حسب حالة التنفيذ (قيد الانتظار، قيد التحضير، جاهز، قيد التوصيل، مكتمل، ملغي)
-- **حالة الدفع** — تصفية حسب حالة الدفع
-- **القناة** — تصفية حسب قناة المبيعات
-
-انقر على **عرض البحث** لتوسيع خيارات البحث و**إخفاء البحث** لطيها.
+- **رقم الطلب** — البحث برقم الطلب
+- **المتجر** — التصفية حسب المتجر
+- **العميل** — التصفية حسب اسم العميل
+- **حالة التنفيذ** — التصفية حسب حالة التنفيذ
+- **حالة الدفع** — التصفية حسب حالة الدفع
+- **القناة** — التصفية حسب قناة المبيعات
 
 ## تفاصيل الطلب
 
@@ -38,58 +52,92 @@ description: كيفية عرض وتصفية وتحديث وإدارة طلبات
 ### معلومات الطلب
 - رقم الطلب والتاريخ والوقت
 - اسم العميل ومعلومات الاتصال
+- **مصدر الطلب** — هل أُنشئ الطلب من البوابة الإدارية (ويب) أو المتجر الإلكتروني
 - طريقة التنفيذ وعنوان التوصيل (إن وُجد)
 - ملاحظات الطلب
 
 ### التفاصيل المالية
-- حالة الدفع والطريقة
+- حالة الدفع وطريقة الدفع الأساسية
 - المبلغ المدفوع مقابل الإجمالي
 - المبلغ المستحق (إذا كان مدفوعاً جزئياً)
-- سجل المدفوعات يعرض جميع المعاملات
+
+### قسم دفعات الطلب
+
+تتضمن صفحة تفاصيل الطلب قسم **دفعات الطلب** الذي يسرد كل معاملة دفع فردية:
+
+| العمود | الوصف |
+|--------|-------|
+| **طريقة الدفع** | الطريقة المستخدمة (نقدي، إلكتروني، إيصال، رصيد المتجر) |
+| **المبلغ** | مبلغ الدفعة |
+| **الحالة** | مكتملة، معلقة، فاشلة، أو ملغية |
+| **التاريخ** | تاريخ الدفع |
+
+هذا القسم مفيد للطلبات ذات الدفع المقسّم أو معاملات الدفع المتعددة.
 
 ### عناصر الطلب
 - قائمة بجميع المنتجات في الطلب
 - الكمية والسعر لكل عنصر
-- معلومات الإصدار
+- معلومات المتغير
 
 ### سجل الطلب
-- خط زمني يعرض جميع تغييرات الحالة والإجراءات
+- جدول زمني يعرض جميع تغييرات الحالة والإجراءات
 
 ## تحديث حالة التنفيذ
 
-لتحديث حالة تنفيذ الطلب:
+لتحديث حالة تنفيذ طلب:
 
 1. افتح تفاصيل الطلب.
-2. انقر على **تحديث التنفيذ** (أو زر تحديث الحالة).
+2. انقر **تحديث التنفيذ** (أو زر تحديث الحالة).
 3. اختر الحالة الجديدة من الخيارات المتاحة.
 4. أكد التحديث.
-
-الحالات المتاحة تعتمد على الحالة الحالية وطريقة التنفيذ. راجع [طرق التنفيذ](/ar/docs/stores/fulfillment-methods) لتدفق الحالة الكامل.
 
 ## إضافة دفعة
 
 إذا كان للطلب رصيد مستحق:
 
 1. افتح تفاصيل الطلب.
-2. انقر على **إضافة دفعة**.
-3. اختر طريقة الدفع.
-4. أدخل المبلغ.
-5. أكد الدفعة.
+2. انقر **إضافة دفعة**.
+3. اختر طريقة الدفع (نقدي، إلكتروني، أو إيصال).
+4. إذا اخترت **إيصال**، يمكنك اختيارياً رفع صورة إيصال.
+5. أدخل المبلغ.
+6. أكد الدفعة.
 
-تتحدث حالة الدفع تلقائياً بناءً على الرصيد المتبقي.
+## قبول إيصالات المتجر الإلكتروني
+
+عندما يقدم عميل طلباً عبر المتجر الإلكتروني ويختار **إيصال** كطريقة دفع، يُنشأ الطلب مع سجل دفع **معلق**. يرفع العميل صورة إيصال كإثبات دفع.
+
+لقبول الدفعة:
+
+1. افتح تفاصيل الطلب. سترى زر **قبول إيصال الدفع** في الرأس.
+2. انقر **قبول إيصال الدفع**.
+3. يفتح مربع تأكيد يعرض **صورة الإيصال** المرفوعة من العميل.
+4. راجع الإيصال للتحقق من الدفع.
+5. انقر **تأكيد** لتحديد الدفعة كـ **مكتملة**.
+
+<Callout title="ملاحظة">
+زر "قبول إيصال الدفع" يظهر فقط لطلبات المتجر الإلكتروني بطريقة دفع إيصال ولديها دفعة معلقة. للطلبات الأخرى، يُعرض زر "إضافة دفعة" العادي.
+</Callout>
+
+## قبول المدفوعات النقدية من المتجر الإلكتروني
+
+عندما يقدم عميل طلباً من المتجر الإلكتروني بالدفع **النقدي**، يُنشأ سجل دفع معلق. بعد أن يدفع العميل عند التوصيل أو الاستلام:
+
+1. افتح تفاصيل الطلب.
+2. انقر **إضافة دفعة** لتسجيل استلام الدفع.
+3. تُسجل الدفعة وتتحدث حالة دفع الطلب.
 
 ## إلغاء طلب
 
 1. افتح تفاصيل الطلب.
-2. انقر على **إلغاء** من قائمة الإجراءات.
+2. انقر **إلغاء** من قائمة الإجراءات.
 3. أكد الإلغاء.
 
 <Callout title="ملاحظة">
-إلغاء طلب يعكس تغييرات المخزون إذا كان تتبع المخزون مفعّلاً. تعود مستويات المخزون لما كانت عليه قبل الطلب.
+إلغاء الطلب يعكس تغييرات المخزون إذا كان تتبع المخزون مُفعّلاً. تعود مستويات المخزون لما كانت عليه قبل الطلب.
 </Callout>
 
 ## طباعة إيصال
 
 1. افتح تفاصيل الطلب.
-2. انقر على **طباعة الإيصال**.
-3. يُفتح الإيصال في مربع حوار الطباعة منسقاً وفقاً لـ [إعدادات الإيصال](/ar/docs/stores/receipt-settings).
+2. انقر **طباعة الإيصال**.
+3. يفتح الإيصال في مربع طباعة منسق حسب [إعدادات الإيصال](/docs/stores/receipt-settings).
