--- a/content/docs/returns-refunds/refunds.mdx
+++ b/content/docs/returns-refunds/refunds.mdx
@@ -28,17 +28,15 @@ Refunds are created from the order details:
 | Method | Description |
 |--------|-------------|
 | **Cash** | Refund given as physical cash |
-| **Card Reversal** | Refund back to the original card |
+| **Online** | Refund via digital channels (card reversal, InstaPay, mobile wallet, bank transfer) |
+| **Receipt** | Refund documented with a receipt (proof of refund transfer) |
 | **Store Credit** | Refund added to customer's store credit balance |
-| **InstaPay** | Refund via InstaPay |
-| **Mobile Wallet** | Refund to customer's mobile wallet |
-| **Bank Transfer** | Refund via bank transfer |
 
 ## Managing Refunds
 
 ### Refunds List Page
 
-Cashvio provides a dedicated **Refunds** list page where you can view and manage all refunds across your store. Access it from **Sales > Refunds** (or **المبالغ المستردة**) in the sidebar.
+Cashvio provides a dedicated **Refunds** list page where you can view and manage all refunds across your store. Access it from **Sales > Refunds** in the sidebar.
 
 The refunds list displays:
 
@@ -58,21 +56,12 @@ You can filter the refunds list by:
 
 - **Order ID** — Find refunds for a specific order
 - **Status** — Filter by Pending, Processed, or Cancelled
-- **Refund Method** — Filter by payment method (Cash, Card Reversal, Store Credit, etc.)
+- **Refund Method** — Filter by method (Cash, Online, Receipt, Store Credit)
 - **Date Range** — Filter refunds created within a specific time period
 
 ### Viewing Refunds from Order Details
 
-Refunds are also visible from the order details page under the **Refunds** section. Each refund shows:
-
-| Field | Description |
-|-------|-------------|
-| **Refund Number** | Unique refund identifier |
-| **Order Number** | The related order |
-| **Status** | Pending, Processed, or Cancelled |
-| **Method** | The refund method |
-| **Amount** | Refund amount |
-| **Date** | When the refund was created |
+Refunds are also visible from the order details page under the **Refunds** section. Each refund shows the refund number, status, method, amount, and date.
 
 ## Refund Statuses
 
