--- a/content/docs/stores/delivery-zones.ar.mdx
+++ b/content/docs/stores/delivery-zones.ar.mdx
@@ -1,47 +1,57 @@
 ---
 title: مناطق التوصيل
-description: كيفية إعداد مناطق ورسوم التوصيل لتعريف العملاء بأماكن التوصيل وتكلفتها.
+description: كيفية إعداد مناطق ورسوم التوصيل ليعرف العملاء أين تُوصّل وكم تكلفة التوصيل.
 ---
 
 ## ما هي مناطق التوصيل؟
 
-مناطق التوصيل تحدد **أين يوصل متجرك** و**كم تكلف خدمة التوصيل** لكل منطقة. عندما يقدم عميل طلب توصيل، يتحقق النظام من عنوانه مقابل مناطق التوصيل لتحديد رسوم التوصيل.
+مناطق التوصيل تحدد **أين يُوصّل متجرك** و**كم تكلفة التوصيل** لكل منطقة. عندما يقدم عميل طلب توصيل (في البوابة أو المتجر الإلكتروني)، يتحقق النظام من عنوانه مقابل مناطق التوصيل لتحديد رسوم التوصيل.
 
 ## كيفية إعداد مناطق التوصيل
 
-1. انقر على **مناطق التوصيل** في القائمة الجانبية. إذا كان لديك متاجر متعددة، سيُطلب منك اختيار متجر أولاً.
-2. سترى قائمة مناطق التوصيل الحالية لهذا المتجر.
-3. انقر على **إضافة منطقة توصيل**.
+1. انقر **مناطق التوصيل** في الشريط الجانبي. إذا كان لديك عدة متاجر، اختر المتجر أولاً.
+2. سترى قائمة مناطق التوصيل الموجودة.
+3. انقر **إضافة منطقة توصيل**.
 4. املأ تفاصيل المنطقة:
 
 | الحقل | الوصف |
 |-------|-------|
-| **اسم المنطقة** | اسم لهذه المنطقة (مثل: "وسط المدينة"، "الضواحي") |
-| **تغطية المنطقة** | المنطقة الجغرافية التي تغطيها هذه المنطقة |
+| **اسم المنطقة** | اسم لهذه المنطقة (مثل "وسط المدينة"، "الضواحي") |
+| **البلد** | البلد الذي تغطيه هذه المنطقة |
+| **المدن** | المدن في ذلك البلد المشمولة في هذه المنطقة |
 | **رسوم التوصيل** | الرسوم المفروضة للتوصيل لهذه المنطقة |
 
-5. انقر على **حفظ**.
+5. انقر **حفظ**.
 
-<Callout title="طريقة وصول بديلة">
+<Callout title="وصول بديل">
 يمكنك أيضاً الوصول لمناطق التوصيل من **الإعدادات > تفاصيل المتجر**، ثم انقر على متجرك، واختر بطاقة إجراء **مناطق التوصيل**.
 </Callout>
 
 ## إدارة مناطق التوصيل
 
-- **تعديل منطقة** — انقر على منطقة موجودة لتحديث رسومها أو تغطيتها.
-- **حذف منطقة** — احذف منطقة إذا لم تعد توصل إليها.
-- **مناطق متعددة** — أنشئ أي عدد من المناطق لتغطية منطقة التوصيل.
+- **تعديل منطقة** — انقر على منطقة موجودة لتحديث رسومها أو مدنها.
+- **حذف منطقة** — احذف منطقة إذا لم تعد تُوصّل لها.
+- **عدة مناطق** — أنشئ أي عدد من المناطق لتغطية منطقة توصيلك.
 
-## كيف تؤثر رسوم التوصيل على الطلبات
+## كيف تؤثر مناطق التوصيل على البوابة
 
-عند [إنشاء طلب توصيل](/ar/docs/orders/creating-orders):
+عند [إنشاء طلب توصيل](/docs/orders/creating-orders) في البوابة الإدارية:
 
-1. يتم مطابقة عنوان التوصيل مع منطقة توصيل.
+1. يُطابَق عنوان التوصيل مع منطقة توصيل.
 2. تُضاف **رسوم التوصيل** المقابلة تلقائياً للطلب.
 3. تظهر الرسوم في ملخص الطلب كبند منفصل.
 
-يمكنك **تعديل** رسوم التوصيل يدوياً في أي طلب فردي أثناء إنشاء الطلب.
+يمكنك **تجاوز** رسوم التوصيل يدوياً لأي طلب أثناء الإنشاء.
+
+## كيف تؤثر مناطق التوصيل على المتجر الإلكتروني
+
+عندما يقدم عميل طلب توصيل على [متجرك الإلكتروني](/docs/online-store/checkout-flow):
+
+1. تعرض قائمة **البلد** فقط البلدان من مناطق التوصيل المُعدّة.
+2. تعرض قائمة **المدينة** فقط المدن من المنطقة المطابقة.
+3. تُطبّق رسوم التوصيل تلقائياً بناءً على المنطقة المختارة.
+4. إذا لم تكن هناك مناطق توصيل مُعدّة، يعرض المتجر الإلكتروني القائمة الكاملة للبلدان والمدن بدون رسوم توصيل.
 
 <Callout title="مهم">
-مناطق التوصيل تنطبق أيضاً على **[متجرك الإلكتروني](/ar/docs/online-store/storefront-overview)**. العملاء الذين يقدمون طلبات توصيل من واجهة متجرك سيرون رسوم التوصيل بناءً على المنطقة المختارة.
+يُنصح بإعداد مناطق التوصيل إذا كنت تقدم التوصيل عبر المتجر الإلكتروني. هذا يضمن أن العملاء يختارون فقط المناطق التي تُوصّل لها فعلاً، وتُطبّق رسوم التوصيل الصحيحة تلقائياً.
 </Callout>
