--- a/content/docs/stores/fulfillment-methods.ar.mdx
+++ b/content/docs/stores/fulfillment-methods.ar.mdx
@@ -1,60 +1,64 @@
 ---
 title: طرق التنفيذ
-description: كيفية إعداد خيارات التوصيل والاستلام والتناول في المكان وداخل المتجر.
+description: كيفية إعداد خيارات التوصيل والاستلام وتناول الطعام في المكان والتسليم في المتجر.
 ---
 
 ## ما هي طرق التنفيذ؟
 
-طرق التنفيذ تحدد **كيفية توصيل الطلبات للعملاء**. عند إنشاء طلب، تختار أنت أو العميل طريقة التنفيذ. لكل متجر تفعيل طرق مختلفة.
+طرق التنفيذ تحدد **كيف تُسلّم الطلبات للعملاء**. عند إنشاء طلب في البوابة الإدارية أو عند قيام العميل بالشراء من متجرك الإلكتروني، يتم اختيار طريقة تنفيذ. كل متجر يمكنه تفعيل طرق مختلفة.
 
 ## طرق التنفيذ المتاحة
 
-| الطريقة | الوصف |
-|---------|-------|
-| **في المتجر** | يشتري العميل ويستلم المنتج في المتجر. |
-| **استلام** | يقدم العميل الطلب ويستلمه من المتجر لاحقاً. |
-| **توصيل** | يتم توصيل الطلب إلى عنوان العميل. |
-| **تناول في المكان** | يطلب العميل ويأكل في المتجر (للمطاعم والكافيهات). |
+| الطريقة | الوصف | متاح في |
+|---------|-------|---------|
+| **في المتجر** | يشتري العميل ويستلم المنتج في المتجر. | البوابة فقط |
+| **استلام** | يقدم العميل الطلب ويستلمه من المتجر لاحقاً. | البوابة + المتجر الإلكتروني |
+| **توصيل** | يُوصّل الطلب لعنوان العميل. | البوابة + المتجر الإلكتروني |
+| **تناول في المكان** | يطلب العميل ويأكل في المتجر (للمطاعم/المقاهي). | البوابة فقط |
 
-## كيفية تكوين طرق التنفيذ
+## كيفية إعداد طرق التنفيذ
 
-1. انقر على **طرق التنفيذ** في القائمة الجانبية. إذا كان لديك متاجر متعددة، سيُطلب منك اختيار متجر أولاً.
+1. انقر **طرق التنفيذ** في الشريط الجانبي. إذا كان لديك عدة متاجر، سيُطلب منك اختيار متجر أولاً.
 2. سترى قائمة طرق التنفيذ.
 3. فعّل أو عطّل كل طريقة.
-4. انقر على **حفظ التغييرات**.
+4. انقر **حفظ التغييرات**.
 
-<Callout title="طريقة وصول بديلة">
+<Callout title="وصول بديل">
 يمكنك أيضاً الوصول لطرق التنفيذ من **الإعدادات > تفاصيل المتجر**، ثم انقر على متجرك، واختر بطاقة إجراء **طرق التنفيذ**.
 </Callout>
 
-## توصيل الطلبات
+## تنفيذ التوصيل
 
-عند تفعيل **التوصيل**، يتطلب إنشاء طلب بالتوصيل:
+عند تفعيل **التوصيل**، يتطلب إنشاء طلب توصيل:
 
-- **عنوان توصيل** (الدولة، المدينة، تفاصيل إضافية)
+- **عنوان توصيل** (البلد، المدينة، تفاصيل إضافية)
 - يمكن للنظام تطبيق **رسوم توصيل** بناءً على منطقة التوصيل
 
-راجع [مناطق التوصيل](/ar/docs/stores/delivery-zones) لإعداد مناطق ورسوم التوصيل.
+راجع [مناطق التوصيل](/docs/stores/delivery-zones) لإعداد مناطق ورسوم التوصيل.
+
+## تنفيذ المتجر الإلكتروني
+
+في متجرك الإلكتروني، يرى العملاء فقط **التوصيل** و**الاستلام** كخيارات تنفيذ (في المتجر وتناول في المكان هي طرق البوابة فقط). تأكد من تفعيل واحدة على الأقل إذا كنت تريد للعملاء تقديم الطلبات عبر المتجر الإلكتروني.
 
 ## تتبع حالة الطلب
 
-كل طريقة تنفيذ تتبع تدفق حالة:
+كل طريقة تنفيذ تتبع تدفق حالة. يمكنك تحديث حالة التنفيذ من صفحة **تفاصيل الطلب**.
 
 **في المتجر / استلام / تناول في المكان:**
-1. **قيد الانتظار** — تم إنشاء الطلب، في انتظار التحضير
+1. **معلق** — أُنشئ الطلب، بانتظار التحضير
 2. **قيد التحضير** — الطلب قيد التحضير
 3. **جاهز** — الطلب جاهز للعميل
 4. **مكتمل** — استلم العميل الطلب
 
-**التوصيل:**
-1. **قيد الانتظار** — تم إنشاء الطلب
+**توصيل:**
+1. **معلق** — أُنشئ الطلب
 2. **قيد التحضير** — الطلب قيد التحضير
 3. **جاهز** — جاهز للإرسال
-4. **قيد التوصيل** — خارج للتوصيل
+4. **قيد التوصيل** — في الطريق للعميل
 5. **مكتمل** — تم التوصيل للعميل
 
-يمكنك تحديث حالة التنفيذ من صفحة **تفاصيل الطلب**.
+في أي مرحلة، يمكن أيضاً **إلغاء** تنفيذ الطلب.
 
 <Callout title="نصيحة">
-طرق التنفيذ تؤثر أيضاً على [المتجر الإلكتروني](/ar/docs/online-store/storefront-overview). العملاء الذين يتسوقون من متجرك الإلكتروني سيرون فقط خيارات التنفيذ التي فعّلتها.
+تابع تحديثات حالة التنفيذ بانتظام. نقل الطلبات عبر تدفق الحالة بسرعة يساعد في تنظيم عملياتك، خاصة عند إدارة طلبات كثيرة من البوابة والمتجر الإلكتروني معاً.
 </Callout>
