--- a/content/docs/stores/payment-methods.ar.mdx
+++ b/content/docs/stores/payment-methods.ar.mdx
@@ -1,63 +1,90 @@
 ---
 title: طرق الدفع
-description: كيفية تكوين طرق الدفع التي يقبلها متجرك وكيف تعمل أثناء الدفع.
+description: كيفية إعداد طرق الدفع المقبولة في متجرك لكل من البوابة الإدارية والمتجر الإلكتروني.
 ---
 
 ## ما هي طرق الدفع؟
 
-طرق الدفع تحدد كيف يمكن للعملاء الدفع مقابل طلباتهم. لكل متجر مجموعة خاصة من طرق الدفع المقبولة. عند إنشاء طلب، يختار أمين الصندوق أو العميل من الطرق المتاحة.
+طرق الدفع تحدد كيف يمكن للعملاء الدفع مقابل طلباتهم. كل متجر لديه مجموعتان من طرق الدفع:
+
+- **طرق دفع البوابة الإدارية** — تُستخدم عند إنشاء الطلبات من البوابة الإدارية (مثل نظام نقاط البيع).
+- **طرق دفع المتجر الإلكتروني** — تُستخدم عند تقديم العملاء للطلبات عبر متجرك الإلكتروني.
 
 ## طرق الدفع المتاحة
 
-يدعم كاشفيو طرق الدفع التالية:
+يستخدم كاشفيو مجموعة موحدة من طرق الدفع:
 
 | الطريقة | الوصف |
 |---------|-------|
-| **نقدي** | الدفع النقدي. يحسب النظام الباقي تلقائياً. |
-| **بطاقة ائتمان/خصم** | الدفع ببطاقة ائتمان أو خصم. |
-| **إنستاباي** | الدفع عبر تحويل إنستاباي. |
-| **محفظة إلكترونية** | الدفع عبر المحافظ الإلكترونية (مثل فودافون كاش). |
-| **تحويل بنكي** | الدفع بالتحويل البنكي المباشر. |
-| **رصيد المتجر** | استخدام رصيد العميل في المتجر. |
+| **نقدي** | الدفع نقداً. يحسب النظام المبلغ المتبقي تلقائياً عند إنشاء طلبات البوابة. في طلبات المتجر الإلكتروني، يدفع العميل عند الاستلام أو التوصيل. |
+| **إلكتروني** | الدفع الرقمي (بطاقة ائتمان/خصم، إنستاباي، محفظة إلكترونية، تحويل بنكي، إلخ). |
+| **إيصال** | يرفع الدافع صورة إيصال الدفع كإثبات على التحويل. |
+| **رصيد المتجر** | استخدام رصيد العميل في المتجر. متاح فقط في البوابة عند اختيار عميل لديه رصيد. |
 
-## كيفية تكوين طرق الدفع
+## إعداد طرق دفع البوابة الإدارية
 
-1. انقر على **طرق الدفع** في القائمة الجانبية. إذا كان لديك متاجر متعددة، سيُطلب منك اختيار متجر أولاً.
-2. سترى قائمة بجميع طرق الدفع المتاحة.
-3. **فعّل** أو **عطّل** كل طريقة باستخدام زر التبديل.
-4. انقر على **حفظ التغييرات**.
+طرق دفع البوابة تتحكم في الخيارات التي يراها فريقك عند إنشاء الطلبات.
 
-<Callout title="طريقة وصول بديلة">
-يمكنك أيضاً الوصول لطرق الدفع من **الإعدادات > تفاصيل المتجر**، ثم انقر على متجرك، واختر بطاقة إجراء **طرق الدفع**.
-</Callout>
+1. انتقل إلى **تفاصيل المتجر > طرق الدفع** في الشريط الجانبي.
+2. إذا كان لديك عدة متاجر، اختر المتجر أولاً.
+3. سترى تبويب **البوابة** مع قائمة بجميع طرق الدفع.
+4. **فعّل** أو **عطّل** كل طريقة باستخدام مفتاح التبديل.
+5. تُحفظ التغييرات تلقائياً بعد التأكيد.
 
 <Callout title="ملاحظة">
-فقط طرق الدفع المفعّلة ستظهر كخيارات عند [إنشاء طلبات](/ar/docs/orders/creating-orders) لهذا المتجر.
+فقط طرق الدفع المُفعّلة للبوابة تظهر كخيارات عند [إنشاء الطلبات](/docs/orders/creating-orders) في البوابة الإدارية.
 </Callout>
 
-## الدفع المختلط
+## طرق دفع المتجر الإلكتروني
 
-يدعم كاشفيو **طرق دفع مختلطة** في طلب واحد. هذا يعني أن العميل يمكنه دفع جزء من الطلب نقداً والمبلغ المتبقي ببطاقة، مثلاً.
+طرق دفع المتجر الإلكتروني تتحكم في الخيارات التي يراها العملاء أثناء الشراء عبر الإنترنت. افتراضياً، **النقدي** و**الإيصال** مُفعّلان لجميع المتاجر.
 
-عند معالجة دفع مختلط:
+<Callout title="ملاحظة">
+الدفع الإلكتروني غير متاح حالياً. النقدي والإيصال هما طريقتا الدفع المتاحتان للمتجر الإلكتروني. عند توفر الدفع الإلكتروني، ستتمكن من تفعيله من البوابة.
+</Callout>
 
-1. أثناء الدفع، اختر طريقة الدفع الأولى وأدخل المبلغ.
-2. أضف طرق دفع إضافية للرصيد المتبقي.
-3. يتتبع النظام كل دفعة بشكل منفصل.
+### كيف تعمل كل طريقة في المتجر الإلكتروني
 
-## الدفع برصيد المتجر
+| الطريقة | تجربة العميل |
+|---------|-------------|
+| **نقدي** | يختار العميل "نقدي" عند الدفع. يتم إنشاء سجل دفع معلق. تقوم بتأكيد الدفع من البوابة الإدارية عند استلام المبلغ. |
+| **إيصال** | يختار العميل "رفع إيصال" ويرفع صورة إيصال التحويل. يتم إنشاء دفع معلق مع الإيصال المرفق. تراجع وتقبل الإيصال من البوابة الإدارية. |
 
-إذا كان لدى العميل **رصيد متجر** (رصيد في حسابه)، يمكنه استخدامه للدفع مقابل الطلبات:
+## دفع رصيد المتجر
 
-- يُطبق رصيد المتجر أولاً، ثم يمكن دفع المبلغ المتبقي بطريقة أخرى.
-- يمكنك إضافة رصيد متجر لحساب العميل من صفحة [تفاصيل العميل](/ar/docs/customers/managing-customers).
+إذا كان لدى العميل **رصيد في المتجر**، يمكن استخدامه لدفع طلبات البوابة:
 
-## جدولة المدفوعات
+- يظهر رصيد المتجر كخيار عند اختيار عميل لديه رصيد.
+- يمكنك استخدام كل أو جزء من الرصيد.
+- إذا لم يغطِّ الرصيد كامل الطلب، يُدفع المبلغ المتبقي بطريقة أخرى (دفع مقسّم).
+- يُخصم الرصيد تلقائياً من حساب العميل.
 
-للطلبات التي لا تُدفع بالكامل فوراً، يمكنك **جدولة الدفع المتبقي**:
+يمكنك إضافة رصيد للعميل من صفحة [تفاصيل العميل](/docs/customers/managing-customers).
 
-1. أثناء الدفع، أكمل الدفع الجزئي.
-2. يصبح المبلغ المتبقي **دفعة معلقة**.
-3. يظهر الطلب في قسم **المدفوعات المتأخرة** إذا لم يُدفع بحلول تاريخ الاستحقاق.
+## الدفع المقسّم
 
-راجع [المدفوعات المتأخرة](/ar/docs/orders/overdue-payments) لمزيد من التفاصيل.
+يدعم كاشفيو **الدفع المقسّم** على طلب واحد. يمكن للعميل دفع جزء من الطلب برصيد المتجر والباقي نقداً أو بطريقة أخرى.
+
+## جدولة الدفعات
+
+للطلبات التي لا تُدفع بالكامل فوراً، يمكنك **جدولة الدفعة المتبقية**:
+
+1. أثناء الدفع، فعّل **جدولة الدفعة المتبقية**.
+2. حدد **تاريخ الاستحقاق** للمبلغ المتبقي.
+3. يُنشأ الطلب مع دفعة مجدولة معلقة.
+4. يظهر الطلب في قسم **الدفعات المتأخرة** إذا لم يُدفع بحلول الموعد.
+
+راجع [الدفعات المتأخرة](/docs/orders/overdue-payments) لمزيد من التفاصيل.
+
+## رفع الإيصال (البوابة)
+
+عند اختيار طريقة الدفع **إيصال** في البوابة أثناء إنشاء الطلب أو إضافة دفعة:
+
+1. يظهر قسم رفع أسفل اختيار طريقة الدفع.
+2. انقر **اختيار ملف** لرفع صورة الإيصال (JPEG أو PNG أو WebP).
+3. يُرفع الإيصال ويُرفق بسجل الدفع.
+4. هذا اختياري — يمكنك إنشاء دفعة إيصال بدون رفع الصورة.
+
+<Callout title="نصيحة">
+رفع الإيصالات مفيد لتتبع مدفوعات التحويل. يمكن عرض صورة الإيصال لاحقاً من صفحة تفاصيل الطلب.
+</Callout>
