--- a/content/docs/online-store/checkout-flow.ar.mdx
+++ b/content/docs/online-store/checkout-flow.ar.mdx
@@ -1,67 +1,113 @@
 ---
-title: تدفق إتمام الشراء الإلكتروني
-description: كيف تعمل عملية إتمام الشراء الإلكتروني للعملاء الذين يتسوقون من واجهة متجرك.
+title: تدفق الشراء عبر الإنترنت
+description: كيف تعمل عملية الشراء عبر الإنترنت للعملاء الذين يتسوقون من متجرك الإلكتروني، بما في ذلك طرق الدفع ورفع الإيصالات.
 ---
 
-## كيف يعمل إتمام الشراء
+## كيف يعمل الشراء
 
-عندما يكون العميل مستعداً للشراء من متجرك الإلكتروني، يمر بعملية إتمام الشراء:
+عندما يكون العميل جاهزاً للشراء من متجرك الإلكتروني، يمر بعملية الدفع:
 
 ### الخطوة 1: مراجعة السلة
 
 يراجع العميل سلته:
-- جميع المنتجات المختارة بالكميات
-- الإجمالي الفرعي ورسوم التوصيل (إن وُجدت) والضريبة والإجمالي
+- جميع المنتجات المختارة مع الكميات
+- المجموع الفرعي ورسوم التوصيل (إن وُجدت) والضريبة والإجمالي
 - يمكنه تعديل الكميات أو إزالة العناصر
-- النقر على **المتابعة لإتمام الشراء**
+- انقر **المتابعة للدفع**
 
-### الخطوة 2: اختيار طريقة التنفيذ
+### الخطوة 2: اختيار التنفيذ
 
 يختار العميل كيف يريد استلام طلبه:
 
 | الخيار | الوصف |
 |--------|-------|
-| **توصيل** | الطلب يُشحن لعنوانه |
-| **استلام** | العميل يستلم من المتجر |
-| **تناول في المكان** | العميل يأكل في المتجر (إن وُجد) |
+| **توصيل** | توصيل الطلب لعنوانه |
+| **استلام** | يستلم العميل من المتجر |
 
-تُعرض فقط طرق التنفيذ التي **فعّلتها** في إعدادات المتجر.
+فقط طرق التنفيذ التي **فعّلتها** في إعدادات المتجر تُعرض.
 
-### الخطوة 3: معلومات العميل
+### الخطوة 3: عنوان التوصيل (إذا اختار التوصيل)
+
+إذا اختار العميل **التوصيل**:
+
+- **البلد** — اختر من [مناطق التوصيل](/docs/stores/delivery-zones) المُعدّة أو قائمة البلدان العامة
+- **المدينة** — اختر من المدن المتاحة
+- **العنوان التفصيلي** — أدخل عنوان التوصيل الكامل
+
+<Callout title="ملاحظة">
+إذا أعددت مناطق توصيل، تظهر فقط البلدان والمدن في مناطقك. تُطبّق رسوم التوصيل تلقائياً بناءً على المنطقة المختارة.
+</Callout>
+
+### الخطوة 4: طريقة الدفع
+
+يختار العميل كيف يريد الدفع:
+
+| الطريقة | كيف تعمل |
+|---------|---------|
+| **نقدي** | الدفع عند التوصيل أو الاستلام. يُنشأ سجل دفع معلق — تؤكده من البوابة الإدارية عند الاستلام. |
+| **إيصال** | يرفع العميل صورة إيصال الدفع (تحويل بنكي، إنستاباي، إلخ) كإثبات. يُنشأ دفع معلق مع الإيصال. تراجعه وتقبله من البوابة. |
+
+فقط طرق دفع المتجر الإلكتروني المُفعّلة تُعرض.
+
+#### رفع الإيصال
+
+عندما يختار العميل **إيصال**:
+
+1. تظهر منطقة رفع حديثة.
+2. ينقر العميل لاختيار صورة إيصال (JPEG أو PNG أو WebP).
+3. تُرفع الصورة تلقائياً.
+4. يظهر تأكيد نجاح عند اكتمال الرفع.
+5. يُرفق الإيصال بدفعة الطلب ويكون مرئياً لك في البوابة الإدارية.
+
+<Callout title="مهم">
+إذا لم يكن لمتجرك **طرق دفع نشطة للمتجر الإلكتروني**، تعرض صفحة الدفع رسالة تحذير: "الدفع غير متاح حالياً. هذا المتجر لا يقبل المدفوعات في الوقت الحالي." لا يستطيع العميل تقديم الطلب حتى تُعدّ طرق الدفع.
+</Callout>
+
+### الخطوة 5: معلومات العميل
 
 يملأ العميل بياناته:
 - **الاسم** — الاسم الأول والأخير
-- **رقم الهاتف** — رقم التواصل
+- **رقم الهاتف** — رقم الاتصال
 
-إذا اختار **التوصيل**:
-- **الدولة**
-- **المدينة**
-- **العنوان التفصيلي**
-
-### الخطوة 4: ملاحظات الطلب (اختياري)
+### الخطوة 6: ملاحظات الطلب (اختياري)
 
 يمكن للعميل إضافة تعليمات خاصة أو ملاحظات للطلب.
 
-### الخطوة 5: مراجعة الطلب
+### الخطوة 7: مراجعة الطلب
 
 ملخص نهائي يعرض:
-- جميع العناصر بالأسعار
-- الإجمالي الفرعي
+- جميع العناصر مع الأسعار
+- المجموع الفرعي
 - رسوم التوصيل (لطلبات التوصيل)
 - رسوم الخدمة (إن وُجدت)
 - الضريبة
 - **المبلغ الإجمالي**
+- طريقة الدفع المختارة
 
-### الخطوة 6: تقديم الطلب
+يجب أن يستوفي العميل **الحد الأدنى لقيمة الطلب** إذا كان مُعدّاً. إذا كان إجمالي السلة أقل من الحد الأدنى، يُعرض تحذير ولا يمكن تقديم الطلب.
 
-ينقر العميل على **تقديم الطلب**. يُنشأ الطلب في بوابة كاشفيو.
+### الخطوة 8: تقديم الطلب
+
+ينقر العميل **تقديم الطلب**. يُنشأ الطلب في بوابتك الإدارية.
 
 ## بعد تقديم الطلب
 
-- يرى العميل صفحة **نجاح الطلب** برقم طلبه.
-- يظهر الطلب في قائمة **المبيعات** في بوابة المالك.
-- يمكنك بعدها معالجة المدفوعات وتحديث حالة التنفيذ وإدارة الطلب كالمعتاد.
+- يرى العميل صفحة **نجاح الطلب** برقم طلبه وعد تنازلي للعودة للمتجر.
+- يظهر الطلب في قائمة **المبيعات** في البوابة الإدارية مع مصدر الطلب محدداً كـ **المتجر الإلكتروني**.
+- تُنشأ سجلات الدفع بناءً على طريقة الدفع:
+  - **نقدي** — سجل دفع **معلق**. أكده عند استلام الدفع من العميل.
+  - **إيصال** — سجل دفع **معلق** مع صورة الإيصال المرفوعة. راجع الإيصال وانقر **قبول إيصال الدفع**.
+
+## إدارة طلبات المتجر الإلكتروني
+
+تظهر طلبات المتجر الإلكتروني بجانب طلبات البوابة في قائمة المبيعات. يمكنك تمييزها من عمود **مصدر الطلب** الذي يعرض "المتجر الإلكتروني".
+
+لمعالجة طلبات المتجر الإلكتروني:
+
+1. **راجع الطلب** — تحقق من العناصر ومعلومات العميل وعنوان التوصيل.
+2. **عالج الدفع** — للطلبات النقدية، أكد استلام الدفع. لطلبات الإيصال، راجع الإيصال المرفوع وانقر **قبول إيصال الدفع**.
+3. **حدّث التنفيذ** — انقل الطلب عبر مراحل التنفيذ (معلق ← قيد التحضير ← جاهز ← قيد التوصيل ← مكتمل).
 
 <Callout title="ملاحظة">
-الطلبات الإلكترونية من واجهة المتجر تظهر في قائمة طلباتك تماماً مثل الطلبات المنشأة يدوياً في البوابة. يمكن إدارتها بنفس الطريقة.
+طلبات المتجر الإلكتروني تتصرف تماماً مثل طلبات البوابة بعد إنشائها. يمكنك إدارتها بنفس الطريقة — تحديث حالة التنفيذ، إضافة دفعات، إنشاء مرتجعات، وإصدار استرداد حسب الحاجة.
 </Callout>
